--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.1.2",
     "firebase": "^9.10.0",
     "gh-pages": "^4.0.0",
     "material-table": "^1.69.3",
@@ -17,6 +18,7 @@
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "secure-ls": "^1.2.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
